plugins {
    id 'application'
}

application {
    mainClass.set("com.donnnno.arcticons.helper.Start")
}

tasks.register('runyou', JavaExec) {
    // Configure the task as needed
    mainClass = 'com.donnnno.arcticons.helper.Start'
    classpath = sourceSets.main.runtimeClasspath
    // Other configurations...
    args = ['you']
}
tasks.register('runblack', JavaExec) {
    // Configure the task as needed
    mainClass = 'com.donnnno.arcticons.helper.Start'
    classpath = sourceSets.main.runtimeClasspath
    // Other configurations...
    args = ['black']
}
tasks.register('runnormal', JavaExec) {
    // Configure the task as needed
    mainClass = 'com.donnnno.arcticons.helper.Start'
    classpath = sourceSets.main.runtimeClasspath
    // Other configurations...
    args = ['normal']
}
tasks.register('rundayNight', JavaExec) {
    // Configure the task as needed
    mainClass = 'com.donnnno.arcticons.helper.Start'
    classpath = sourceSets.main.runtimeClasspath
    // Other configurations...
    args = ['dayNight']
}




dependencies {
    // SDK and tools required for Android and other general tasks
    implementation("com.android.tools:sdk-common:31.8.0")

    // XML parsing (you are using dom4j here)
    implementation("org.dom4j:dom4j:2.1.4")

    // File handling utilities
    implementation("commons-io:commons-io:2.15.0")

    // For WebP image format handling (if you need it)
    implementation("org.sejda.imageio:webp-imageio:0.1.6")

    // Add Apache Batik for SVG processing
    implementation("org.apache.xmlgraphics:batik-transcoder:1.14")   // Batik's SVG transcoder
    implementation("org.apache.xmlgraphics:batik-dom:1.14")          // Batik's DOM utilities
    implementation("org.apache.xmlgraphics:batik-swing:1.14")        // Batik's swing utilities for rendering

    // Optional: If you want to work with BufferedImage in Java 2D
    implementation("org.apache.xmlgraphics:batik-svggen:1.14")  // To generate image from SVGs
    implementation("org.apache.xmlgraphics:batik-codec:1.17")

}

java {
    sourceCompatibility = JavaVersion.VERSION_14
    targetCompatibility = JavaVersion.VERSION_14
}